# rude_psychic

./: AUTHORS  ChangeLog  INSTALL  NEWS  README  TODO  configure.ac  rude_psychic.c
src/: Makefile.am  rude_psychic.c
